src/parser/Mx_parserParser.py
# Generated from Mx_parser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO



class Mx_parserParser(Parser):

    grammarFileName = "Mx_parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'class'",
        "'{'",
        "'}'",
        "';'",
        "','",
        "'='",
        "'if'",
        "'else'",
        "'while'",
        "'for'",
        "'return'",
        "'break'",
        "'continue'",
        "'?'",
        "':'",
        "'++'",
        "'--'",
        "'!'",
        "'~'",
        "'.'",
        "'new'",
        "'['",
        "']'",
        "'&&'",
        "'||'",
        "'<'",
        "'>'",
        "'<='",
        "'>='",
        "'=='",
        "'!='",
        "'int'",
        "'bool'",
        "'string'",
        "'void'",
        "'true'",
        "'false'",
        "'null'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'%'",
        "'<<'",
        "'>>'",
        "'&'",
        "'^'",
        "'|'",
        "'('",
        "')'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "PLUS",
        "MINUS",
        "MUL",
        "DIV",
        "MOD",
        "LSHIFT",
        "RSHIFT",
        "AND",
        "XOR",
        "OR",
        "LPAREN",
        "RPAREN",
        "IDENTIFIER",
        "INTEGER_CONSTANT",
        "LINE_COMMENT",
        "BLOCK_COMMENT",
        "FSTRING_PART1",
        "STRING_CONTENT",
        "FSTRING_PART2",
        "ESC",
        "ESC2",
        "FSTRING_MIDDLE_PART",
        "WS",
    ]

    RULE_program = 0
    RULE_functionDefinition = 1
    RULE_classDefinition = 2
    RULE_variableDeclaration = 3
    RULE_variableDeclarationparts = 4
    RULE_classMember = 5
    RULE_functionBody = 6
    RULE_statement = 7
    RULE_forControl = 8
    RULE_expression = 9
    RULE_square_brackets1 = 10
    RULE_square_brackets2 = 11
    RULE_expressionLists = 12
    RULE_logicOperator = 13
    RULE_relationalOperator = 14
    RULE_parameterList = 15
    RULE_parameter = 16
    RULE_type = 17
    RULE_arrayType = 18
    RULE_returnType = 19
    RULE_constant = 20
    RULE_array_constant = 21
    RULE_fstring = 22
    RULE_string_constant = 23

    ruleNames = [
        "program",
        "functionDefinition",
        "classDefinition",
        "variableDeclaration",
        "variableDeclarationparts",
        "classMember",
        "functionBody",
        "statement",
        "forControl",
        "expression",
        "square_brackets1",
        "square_brackets2",
        "expressionLists",
        "logicOperator",
        "relationalOperator",
        "parameterList",
        "parameter",
        "type",
        "arrayType",
        "returnType",
        "constant",
        "array_constant",
        "fstring",
        "string_constant",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    PLUS = 39
    MINUS = 40
    MUL = 41
    DIV = 42
    MOD = 43
    LSHIFT = 44
    RSHIFT = 45
    AND = 46
    XOR = 47
    OR = 48
    LPAREN = 49
    RPAREN = 50
    IDENTIFIER = 51
    INTEGER_CONSTANT = 52
    LINE_COMMENT = 53
    BLOCK_COMMENT = 54
    FSTRING_PART1 = 55
    STRING_CONTENT = 56
    FSTRING_PART2 = 57
    ESC = 58
    ESC2 = 59
    FSTRING_MIDDLE_PART = 60
    WS = 61

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Mx_parserParser.EOF, 0)

        def functionDefinition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    Mx_parserParser.FunctionDefinitionContext
                )
            else:
                return self.getTypedRuleContext(
                    Mx_parserParser.FunctionDefinitionContext, i
                )

        def classDefinition(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ClassDefinitionContext)
            else:
                return self.getTypedRuleContext(
                    Mx_parserParser.ClassDefinitionContext, i
                )

        def variableDeclaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    Mx_parserParser.VariableDeclarationContext
                )
            else:
                return self.getTypedRuleContext(
                    Mx_parserParser.VariableDeclarationContext, i
                )

        def getRuleIndex(self):
            return Mx_parserParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

    def program(self):

        localctx = Mx_parserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 2251864238194690) != 0:
                self.state = 51
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
                if la_ == 1:
                    self.state = 48
                    self.functionDefinition()
                    pass

                elif la_ == 2:
                    self.state = 49
                    self.classDefinition()
                    pass

                elif la_ == 3:
                    self.state = 50
                    self.variableDeclaration()
                    pass

                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(Mx_parserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(Mx_parserParser.ReturnTypeContext, 0)

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(Mx_parserParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(Mx_parserParser.RPAREN, 0)

        def functionBody(self):
            return self.getTypedRuleContext(Mx_parserParser.FunctionBodyContext, 0)

        def parameterList(self):
            return self.getTypedRuleContext(Mx_parserParser.ParameterListContext, 0)

        def getRuleIndex(self):
            return Mx_parserParser.RULE_functionDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionDefinition"):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionDefinition"):
                listener.exitFunctionDefinition(self)

    def functionDefinition(self):

        localctx = Mx_parserParser.FunctionDefinitionContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_functionDefinition)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.returnType()
            self.state = 59
            self.match(Mx_parserParser.IDENTIFIER)
            self.state = 60
            self.match(Mx_parserParser.LPAREN)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 2251829878456320) != 0:
                self.state = 61
                self.parameterList()

            self.state = 64
            self.match(Mx_parserParser.RPAREN)
            self.state = 65
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def classMember(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ClassMemberContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.ClassMemberContext, i)

        def getRuleIndex(self):
            return Mx_parserParser.RULE_classDefinition

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterClassDefinition"):
                listener.enterClassDefinition(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitClassDefinition"):
                listener.exitClassDefinition(self)

    def classDefinition(self):

        localctx = Mx_parserParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefinition)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(Mx_parserParser.T__0)
            self.state = 68
            self.match(Mx_parserParser.IDENTIFIER)
            self.state = 69
            self.match(Mx_parserParser.T__1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 2251864238194688) != 0:
                self.state = 70
                self.classMember()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(Mx_parserParser.T__2)
            self.state = 77
            self.match(Mx_parserParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(Mx_parserParser.TypeContext, 0)

        def variableDeclarationparts(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    Mx_parserParser.VariableDeclarationpartsContext
                )
            else:
                return self.getTypedRuleContext(
                    Mx_parserParser.VariableDeclarationpartsContext, i
                )

        def arrayType(self):
            return self.getTypedRuleContext(Mx_parserParser.ArrayTypeContext, 0)

        def getRuleIndex(self):
            return Mx_parserParser.RULE_variableDeclaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariableDeclaration"):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariableDeclaration"):
                listener.exitVariableDeclaration(self)

    def variableDeclaration(self):

        localctx = Mx_parserParser.VariableDeclarationContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_variableDeclaration)
        self._la = 0  # Token type
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.type_()
                self.state = 80
                self.variableDeclarationparts()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 5:
                    self.state = 81
                    self.match(Mx_parserParser.T__4)
                    self.state = 82
                    self.variableDeclarationparts()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 88
                self.match(Mx_parserParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.arrayType()
                self.state = 91
                self.variableDeclarationparts()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 5:
                    self.state = 92
                    self.match(Mx_parserParser.T__4)
                    self.state = 93
                    self.variableDeclarationparts()
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 99
                self.match(Mx_parserParser.T__3)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableDeclarationpartsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return Mx_parserParser.RULE_variableDeclarationparts

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVariableDeclarationparts"):
                listener.enterVariableDeclarationparts(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVariableDeclarationparts"):
                listener.exitVariableDeclarationparts(self)

    def variableDeclarationparts(self):

        localctx = Mx_parserParser.VariableDeclarationpartsContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_variableDeclarationparts)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(Mx_parserParser.IDENTIFIER)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 6:
                self.state = 104
                self.match(Mx_parserParser.T__5)
                self.state = 105
                self.expression(0)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassMemberContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(
                Mx_parserParser.VariableDeclarationContext, 0
            )

        def IDENTIFIER(self):
            return self.getToken(Mx_parserParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(Mx_parserParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(Mx_parserParser.RPAREN, 0)

        def functionBody(self):
            return self.getTypedRuleContext(Mx_parserParser.FunctionBodyContext, 0)

        def parameterList(self):
            return self.getTypedRuleContext(Mx_parserParser.ParameterListContext, 0)

        def functionDefinition(self):
            return self.getTypedRuleContext(
                Mx_parserParser.FunctionDefinitionContext, 0
            )

        def getRuleIndex(self):
            return Mx_parserParser.RULE_classMember

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterClassMember"):
                listener.enterClassMember(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitClassMember"):
                listener.exitClassMember(self)

    def classMember(self):

        localctx = Mx_parserParser.ClassMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classMember)
        self._la = 0  # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(Mx_parserParser.IDENTIFIER)
                self.state = 110
                self.match(Mx_parserParser.LPAREN)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 2251829878456320) != 0:
                    self.state = 111
                    self.parameterList()

                self.state = 114
                self.match(Mx_parserParser.RPAREN)
                self.state = 115
                self.functionBody()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 116
                self.functionDefinition()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionBodyContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext, i)

        def getRuleIndex(self):
            return Mx_parserParser.RULE_functionBody

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionBody"):
                listener.enterFunctionBody(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionBody"):
                listener.exitFunctionBody(self)

    def functionBody(self):

        localctx = Mx_parserParser.FunctionBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_functionBody)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(Mx_parserParser.T__1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 115406351067201172) != 0:
                self.state = 120
                self.statement()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(Mx_parserParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return Mx_parserParser.RULE_statement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class WhileStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(Mx_parserParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(Mx_parserParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(Mx_parserParser.StatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhileStatement"):
                listener.enterWhileStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhileStatement"):
                listener.exitWhileStatement(self)

    class EmptyStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEmptyStatement"):
                listener.enterEmptyStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEmptyStatement"):
                listener.exitEmptyStatement(self)

    class AssignmentStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignmentStatement"):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignmentStatement"):
                listener.exitAssignmentStatement(self)

    class PrivatevariableDeclarationContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variableDeclaration(self):
            return self.getTypedRuleContext(
                Mx_parserParser.VariableDeclarationContext, 0
            )

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrivatevariableDeclaration"):
                listener.enterPrivatevariableDeclaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrivatevariableDeclaration"):
                listener.exitPrivatevariableDeclaration(self)

    class ForStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(Mx_parserParser.LPAREN, 0)

        def forControl(self):
            return self.getTypedRuleContext(Mx_parserParser.ForControlContext, 0)

        def RPAREN(self):
            return self.getToken(Mx_parserParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(Mx_parserParser.StatementContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterForStatement"):
                listener.enterForStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitForStatement"):
                listener.exitForStatement(self)

    class BreakStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBreakStatement"):
                listener.enterBreakStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBreakStatement"):
                listener.exitBreakStatement(self)

    class ExpressionStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpressionStatement"):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpressionStatement"):
                listener.exitExpressionStatement(self)

    class BlockContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

    class ContinueStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContinueStatement"):
                listener.enterContinueStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContinueStatement"):
                listener.exitContinueStatement(self)

    class IfStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(Mx_parserParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(Mx_parserParser.RPAREN, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(Mx_parserParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mx_parserParser.StatementContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfStatement"):
                listener.enterIfStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfStatement"):
                listener.exitIfStatement(self)

    class ReturnStatementContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a Mx_parserParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Mx_parserParser.ExpressionContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterReturnStatement"):
                listener.enterReturnStatement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitReturnStatement"):
                listener.exitReturnStatement(self)

    def statement(self):

        localctx = Mx_parserParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0  # Token type
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 14, self._ctx)
            if la_ == 1:
                localctx = Mx_parserParser.EmptyStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(Mx_parserParser.T__3)
                pass

            elif la_ == 2:
                localctx = Mx_parserParser.ExpressionStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.expression(0)
                self.state = 130
                self.match(Mx_parserParser.T__3)
                pass

            elif la_ == 3:
                localctx = Mx_parserParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
